Fixed gap on the bottom of the contact me

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,4 +124,5 @@ i {
 
 .social p {
   color: #007bff;
+  margin-bottom: 0;
 }
